@@ -15,6 +15,7 @@ import software.amazon.awssdk.services.s3.model.*;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static software.amazon.awssdk.core.sync.RequestBody.fromInputStream;
 
@@ -47,9 +48,8 @@ public class CloudflareR2Service {
                 .build();
     }
 
-    public void uploadFile(MultipartFile file, String userName, String fileName) throws IOException {
-        String objectKey = userName + "/" + fileName;
-
+    private void uploadFile(MultipartFile file, String userName, String fileName, FileType fileType) throws IOException {
+        String objectKey = userName + "/" + fileType.getFolder() + "/" + fileName;
         PutObjectRequest request = PutObjectRequest.builder()
                 .bucket(bucketName)
                 .key(objectKey)
@@ -58,6 +58,14 @@ public class CloudflareR2Service {
                 .build();
 
         s3Client.putObject(request, fromInputStream(file.getInputStream(), file.getSize()));
+    }
+
+    public void uploadSong(MultipartFile file, String userName, String fileName) throws IOException {
+        uploadFile(file, userName, fileName, FileType.SONG);
+    }
+
+    public void uploadAlbumArt(MultipartFile file, String userName, String fileName) throws IOException {
+        uploadFile(file, userName, fileName, FileType.ALBUM_ART);
     }
 
     public List<String> listFiles(String userName) {
@@ -70,24 +78,57 @@ public class CloudflareR2Service {
         return response.contents().stream()
                 .map(S3Object::key)
                 .map(key -> key.substring(key.indexOf("/") + 1))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public ResponseInputStream<GetObjectResponse> streamFile(String fileName, String userName) {
+    private ResponseInputStream<GetObjectResponse> streamFile(String userName, String fileName, FileType fileType) {
+        String objectKey = userName + "/" + fileType.getFolder() + "/" + fileName;
         GetObjectRequest request = GetObjectRequest.builder()
                 .bucket(bucketName)
-                .key(userName + "/" + fileName)
+                .key(objectKey)
                 .build();
 
         return s3Client.getObject(request);
     }
 
-    public void deleteFile(String fileName, String userName) {
+    public ResponseInputStream<GetObjectResponse> streamSong(String fileName, String userName) {
+        return streamFile(userName, fileName, FileType.SONG);
+    }
+
+    public ResponseInputStream<GetObjectResponse> streamAlbumArt(String fileName, String userName) {
+        return streamFile(userName, fileName, FileType.ALBUM_ART);
+    }
+
+    private void deleteFile(String userName, String fileName, FileType fileType) {
+        String objectKey = userName + "/" + fileType.getFolder() + "/" + fileName;
         DeleteObjectRequest request = DeleteObjectRequest.builder()
                 .bucket(bucketName)
-                .key(userName + "/" + fileName)
+                .key(objectKey)
                 .build();
 
         s3Client.deleteObject(request);
+    }
+
+    public void deleteSong(String fileName, String userName) {
+        deleteFile(userName, fileName, FileType.SONG);
+    }
+
+    public void deleteAlbumArt(String fileName, String userName) {
+        deleteFile(userName, fileName, FileType.ALBUM_ART);
+    }
+
+    private enum FileType {
+        SONG("songs"),
+        ALBUM_ART("album-art");
+
+        private final String folder;
+
+        FileType(String folder) {
+            this.folder = folder;
+        }
+
+        public String getFolder() {
+            return folder;
+        }
     }
 }
